Lots more HTML and styling.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,29 @@
 		</script>
 	</head>
 	<body onload="window.cosmet_.start()">
-		<div id="main" class="cosmet">
+		<div class="cosmet">
+			<div class="graph-container">
+				<div class="graph">
+				</div>
+				<div class="status">
+					<div class="title">
+						Statistics
+					</div>
+					<div class="status-lower">
+						<div class="watts-cont">
+							<div class="watt-prev"></div>
+							<div class="watt-prediction"></div>
+						</div>
+						<div class="direction"></div>
+					</div>
+				</div>
+			</div>
+			<div class="details-container">
+				<div class="current-details">
+				</div>
+				<div class="badges">
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
